# republic

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
republic/: __init__.py  api.py
tests/: test_api.py  test_republic.py
