[tool.poetry]
name = "republic"
version = "0.1.0"
description = ""
authors = ["robertsiipola <robert@three.consulting>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
pre-commit = "^2.16.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
